--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity android:name=".Activities.MainActivity"
             android:label="TBR Jar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,10 +17,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EmailPasswordActivity"/>
-        <activity android:name=".FindBooksActivity"/>
-        <activity android:name=".BooksFoundActivity"/>
-        <activity android:name=".BookDetailsActivity"/>
+        <activity android:name=".Activities.EmailPasswordActivity"/>
+        <activity android:name=".Activities.FindBooksActivity"/>
+        <activity android:name=".Activities.BooksFoundActivity"/>
+        <activity android:name=".Activities.BookDetailsActivity"/>
 
     </application>
 
